--- a/music.html
+++ b/music.html
@@ -13,116 +13,116 @@
   <!-- ========================================= -->
   <style>
     * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
-    body {
-      min-height: 100vh;
-      font-family: 'Source Sans Pro', sans-serif;
-      background-color: #0a0a0a;
-      color: #f0f0f0;
-      overflow-x: hidden;
-      position: relative;
-    }
+body {
+  min-height: 100vh;
+  font-family: 'Source Sans Pro', sans-serif;
+  background-color: #0a0a0a;
+  color: #f0f0f0;
+  overflow-x: hidden;
+  position: relative;
+}
 
-    .background {
-      background: rgba(20, 20, 30, 0.8);
-      opacity: 1;
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      z-index: -2;
-    }
+.background {
+  background: rgba(20, 20, 30, 0.8);
+  opacity: 1;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+}
 
-    .mist-overlay {
-      background: url('images/mist-overlay.png') repeat;
-      opacity: 0.4;
-      position: fixed;
-      width: 100%;
-      height: 250vh;
-      z-index: -1;
-      animation: mistScroll 120s linear infinite;
-    }
+.mist-overlay {
+  background: url('images/mist-overlay.png') repeat;
+  opacity: 0.4;
+  position: fixed;
+  width: 100%;
+  height: 250vh;
+  z-index: -1;
+  animation: mistScroll 120s linear infinite;
+}
 
-    @keyframes mistScroll {
-      from { background-position: 0 0; }
-      to { background-position: -500px 500px; }
-    }
+@keyframes mistScroll {
+  from { background-position: 0 0; }
+  to { background-position: -500px 500px; }
+}
 
-    .header {
-      text-align: center;
-      padding: 3rem 2rem 2rem;
-      backdrop-filter: blur(5px);
-      background: rgba(0, 0, 0, 0.2);
-      margin-bottom: 2rem;
-    }
+.header {
+  text-align: center;
+  padding: 3rem 2rem 2rem;
+  backdrop-filter: blur(5px);
+  background: rgba(0, 0, 0, 0.2);
+  margin-bottom: 2rem;
+}
 
-    h1 {
-      font-family: 'Cormorant Garamond', serif;
-      font-size: 3.5rem;
-      font-weight: 500;
-      color: #f2f2f2;
-      text-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
-      margin-bottom: 0.5rem;
-    }
+h1 {
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 3.5rem;
+  font-weight: 500;
+  color: #f2f2f2;
+  text-shadow: 0 0 20px rgba(0, 0, 0, 0.7);
+  margin-bottom: 0.5rem;
+}
 
-    .subtitle {
-      font-size: 1.2rem;
-      color: rgba(255, 255, 255, 0.8);
-      font-weight: 300;
-      font-style: italic;
-    }
+.subtitle {
+  font-size: 1.2rem;
+  color: rgba(255, 255, 255, 0.8);
+  font-weight: 300;
+  font-style: italic;
+}
 
-    .nav {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-      gap: 1rem;
-      max-width: 600px;
-      margin: 0 auto 3rem;
-      padding: 0 2rem;
-    }
+.nav {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  gap: 1rem;
+  max-width: 600px;
+  margin: 0 auto 3rem;
+  padding: 0 2rem;
+}
 
-    .nav a {
-      background: rgba(0, 0, 0, 0.3);
-      backdrop-filter: blur(10px);
-      color: #fff;
-      text-decoration: none;
-      padding: 1rem 1.5rem;
-      border-radius: 8px;
-      font-size: 1rem;
-      font-weight: 400;
-      transition: all 0.3s ease;
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      text-align: center;
-      height: 60px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+.nav a {
+  background: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(10px);
+  color: #fff;
+  text-decoration: none;
+  padding: 1rem 1.5rem;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: 400;
+  transition: all 0.3s ease;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  text-align: center;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-    .nav a:hover {
-      background: rgba(255, 255, 255, 0.15);
-      border-color: rgba(255, 255, 255, 0.4);
-      transform: translateY(-3px);
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    }
+.nav a:hover {
+  background: rgba(255, 255, 255, 0.15);
+  border-color: rgba(255, 255, 255, 0.4);
+  transform: translateY(-3px);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
 
-    .nav a.creative {
-      border-color: rgba(138, 43, 226, 0.4);
-    }
+.nav a.creative {
+  border-color: rgba(138, 43, 226, 0.4);
+}
 
-    .nav a.creative:hover {
-      border-color: rgba(138, 43, 226, 0.8);
-      background: rgba(138, 43, 226, 0.1);
-    }
+.nav a.creative:hover {
+  border-color: rgba(138, 43, 226, 0.8);
+  background: rgba(138, 43, 226, 0.1);
+}
 
-    .nav a.current {
-      background: rgba(138, 43, 226, 0.2);
-      border-color: rgba(138, 43, 226, 0.6);
-    }
-     /* ========== MUSIC SECTION STYLES ========== */
+.nav a.current {
+  background: rgba(138, 43, 226, 0.2);
+  border-color: rgba(138, 43, 226, 0.6);
+}
+
 .music-container {
   max-width: 1000px;
   margin: 0 auto;
@@ -138,6 +138,18 @@
   backdrop-filter: blur(10px);
   border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 15px;
+  position: relative;
+  overflow: hidden;
+}
+
+.intro-section::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 3px;
+  background: linear-gradient(90deg, transparent, rgba(138, 43, 226, 0.6), transparent);
 }
 
 .intro-section p {
@@ -147,78 +159,239 @@
   margin-bottom: 1.5rem;
 }
 
-.playlist-controls {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 1.5rem;
-  padding: 1.5rem;
-  margin-bottom: 2rem;
-  background: rgba(0, 0, 0, 0.3);
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 12px;
+.intro-section p:last-child {
+  margin-bottom: 0;
 }
 
-.continuous-play-toggle,
-.shuffle-button,
-.repeat-button {
-  background: rgba(0, 0, 0, 0.4);
-  color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(255, 255, 255, 0.2);
+.playlist-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  margin-bottom: 2rem;
+  padding: 1.5rem;
+  background: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 12px;
+  flex-wrap: wrap;
+}
+
+.continuous-play-toggle {
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+  cursor: pointer;
   padding: 0.75rem 1.25rem;
+  background: rgba(0, 0, 0, 0.4);
+  border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 8px;
+  transition: all 0.3s ease;
+}
+
+.continuous-play-toggle:hover {
+  background: rgba(255, 255, 255, 0.1);
+  border-color: rgba(255, 255, 255, 0.3);
+}
+
+.continuous-play-toggle.active {
+  background: rgba(138, 43, 226, 0.2);
+  border-color: rgba(138, 43, 226, 0.4);
+}
+
+.toggle-switch {
+  position: relative;
+  width: 40px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  transition: all 0.3s ease;
+}
+
+.toggle-switch.active {
+  background: rgba(138, 43, 226, 0.6);
+}
+
+.toggle-slider {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 16px;
+  height: 16px;
+  background: #fff;
+  border-radius: 50%;
+  transition: all 0.3s ease;
+}
+
+.toggle-switch.active .toggle-slider {
+  transform: translateX(20px);
+}
+
+.shuffle-button, .repeat-button {
+  background: rgba(0, 0, 0, 0.4);
+  color: rgba(255, 255, 255, 0.7);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 0.75rem 1rem;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  font-size: 1.1rem;
+}
+
+.shuffle-button:hover, .repeat-button:hover {
+  background: rgba(255, 255, 255, 0.1);
+  border-color: rgba(255, 255, 255, 0.3);
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.shuffle-button.active, .repeat-button.active {
+  background: rgba(138, 43, 226, 0.2);
+  border-color: rgba(138, 43, 226, 0.4);
+  color: rgba(138, 43, 226, 1);
+}
+
+.now-playing-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(0, 0, 0, 0.9);
+  backdrop-filter: blur(20px);
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  padding: 1rem 2rem;
+  display: none;
+  align-items: center;
+  gap: 1rem;
+  z-index: 100;
+  transform: translateY(100%);
+  transition: transform 0.3s ease;
+}
+
+.now-playing-bar.show {
+  display: flex;
+  transform: translateY(0);
+}
+
+.now-playing-info {
+  flex: 1;
+  min-width: 0;
+}
+
+.now-playing-title {
+  font-weight: 500;
+  color: #f2f2f2;
+  font-size: 0.95rem;
+  margin-bottom: 0.25rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.now-playing-progress {
+  height: 3px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 1.5px;
+  overflow: hidden;
+}
+
+.now-playing-fill {
+  height: 100%;
+  background: linear-gradient(90deg, rgba(138, 43, 226, 0.8), rgba(138, 43, 226, 0.6));
+  width: 0%;
+  transition: width 0.1s ease;
+}
+
+.global-play-button {
+  background: rgba(138, 43, 226, 0.3);
+  border: 2px solid rgba(138, 43, 226, 0.6);
+  color: #fff;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   cursor: pointer;
   transition: all 0.3s ease;
   font-size: 1rem;
 }
 
-.continuous-play-toggle:hover,
-.shuffle-button:hover,
-.repeat-button:hover {
-  background: rgba(255, 255, 255, 0.1);
-  border-color: rgba(255, 255, 255, 0.3);
+.global-play-button:hover {
+  background: rgba(138, 43, 226, 0.5);
+  border-color: rgba(138, 43, 226, 0.8);
+}
+
+.global-play-button.playing {
+  background: rgba(138, 43, 226, 0.6);
+  border-color: rgba(138, 43, 226, 1);
+}
+
+.track-counter {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 0.85rem;
+  white-space: nowrap;
 }
 
 .playlist-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 2rem;
+  margin-bottom: 3rem;
 }
 
 .track-card {
   background: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(15px);
   border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: 15px;
   padding: 2rem;
-  backdrop-filter: blur(12px);
-  transition: transform 0.3s ease;
+  transition: all 0.3s ease;
+  position: relative;
+  overflow: hidden;
 }
 
 .track-card:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.4);
+  transform: translateY(-5px);
   border-color: rgba(255, 255, 255, 0.4);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+}
+
+.track-card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 3px;
+  background: linear-gradient(90deg, transparent, rgba(138, 43, 226, 0.6), transparent);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.track-card:hover::before {
+  opacity: 1;
 }
 
 .track-title {
   font-family: 'Cormorant Garamond', serif;
   font-size: 1.6rem;
-  color: #f0f0f0;
-  margin-bottom: 0.5rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+  color: #f2f2f2;
 }
 
 .track-description {
-  font-size: 0.95rem;
   color: rgba(255, 255, 255, 0.7);
+  font-size: 0.95rem;
+  line-height: 1.5;
+  margin-bottom: 1.5rem;
   font-style: italic;
-  margin-bottom: 1rem;
 }
 
 .audio-player {
-  padding: 1rem;
-  border-radius: 12px;
   background: rgba(0, 0, 0, 0.6);
+  border-radius: 12px;
+  padding: 1rem;
   border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -236,27 +409,35 @@
   border-radius: 50%;
   width: 48px;
   height: 48px;
-  font-size: 1.2rem;
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
   transition: all 0.3s ease;
+  font-size: 1.2rem;
 }
 
 .play-button:hover {
   background: rgba(138, 43, 226, 0.5);
-  transform: scale(1.05);
   border-color: rgba(138, 43, 226, 0.8);
+  transform: scale(1.05);
+}
+
+.play-button.playing {
+  background: rgba(138, 43, 226, 0.6);
+  border-color: rgba(138, 43, 226, 1);
 }
 
 .track-info {
   flex: 1;
+  min-width: 0;
 }
 
 .track-name {
   font-weight: 500;
   color: #f2f2f2;
+  font-size: 1rem;
+  margin-bottom: 0.25rem;
 }
 
 .track-time {
@@ -273,14 +454,17 @@
   height: 6px;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 3px;
-  overflow: hidden;
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
 }
 
 .progress-fill {
   height: 100%;
-  background: linear-gradient(90deg, rgba(138, 43, 226, 0.8), rgba(138, 43, 226, 0.5));
+  background: linear-gradient(90deg, rgba(138, 43, 226, 0.8), rgba(138, 43, 226, 0.6));
+  border-radius: 3px;
   width: 0%;
+  transition: width 0.1s ease;
 }
 
 .volume-container {
@@ -290,7 +474,9 @@
 }
 
 .volume-icon {
+  color: rgba(255, 255, 255, 0.7);
   font-size: 1rem;
+  min-width: 16px;
 }
 
 .volume-slider {
@@ -298,14 +484,15 @@
   height: 4px;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 2px;
+  cursor: pointer;
   position: relative;
 }
 
 .volume-fill {
   height: 100%;
-  background: linear-gradient(90deg, rgba(138, 43, 226, 0.8), rgba(138, 43, 226, 0.5));
-  width: 70%;
+  background: linear-gradient(90deg, rgba(138, 43, 226, 0.8), rgba(138, 43, 226, 0.6));
   border-radius: 2px;
+  width: 70%;
 }
 
 .volume-text {
@@ -315,17 +502,146 @@
   text-align: right;
 }
 
-/* Responsive tweaks */
+.back-to-top {
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  background: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(10px);
+  color: #fff;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  z-index: 10;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease;
+}
+
+.back-to-top:hover {
+  background: rgba(255, 255, 255, 0.1);
+  border-color: rgba(255, 255, 255, 0.4);
+  transform: translateY(-2px);
+}
+
+.back-to-top.show {
+  display: flex;
+}
+
+footer {
+  text-align: center;
+  padding: 3rem 2rem;
+  font-size: 0.9rem;
+  color: rgba(255,255,255,0.5);
+  font-family: 'Source Sans Pro', sans-serif;
+  backdrop-filter: blur(5px);
+  background: rgba(0, 0, 0, 0.2);
+  margin-top: 3rem;
+}
+
+/* Custom audio element styling */
+audio {
+  display: none;
+}
+
+.waveform-visual {
+  height: 40px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 4px;
+  margin: 0.5rem 0;
+  position: relative;
+  overflow: hidden;
+}
+
+.waveform-bars {
+  display: flex;
+  align-items: end;
+  height: 100%;
+  gap: 2px;
+  padding: 4px;
+}
+
+.waveform-bar {
+  flex: 1;
+  background: rgba(138, 43, 226, 0.4);
+  border-radius: 1px;
+  height: 20%;
+  transition: height 0.3s ease;
+}
+
+.track-card:hover .waveform-bar {
+  height: 60%;
+}
+
+.track-card.playing .waveform-bar {
+  animation: waveAnimation 2s ease-in-out infinite;
+}
+
+@keyframes waveAnimation {
+  0%, 100% { height: 20%; }
+  50% { height: 80%; }
+}
+
+.track-card.playing .waveform-bar:nth-child(2n) {
+  animation-delay: 0.2s;
+}
+
+.track-card.playing .waveform-bar:nth-child(3n) {
+  animation-delay: 0.4s;
+}
+
+/* Media Queries */
 @media (max-width: 768px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+  
+  .nav {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0.8rem;
+  }
+  
+  .nav a {
+    padding: 0.8rem 1rem;
+    font-size: 0.9rem;
+  }
+
   .playlist-grid {
     grid-template-columns: 1fr;
+    gap: 1.5rem;
   }
-  .player-controls {
-    flex-direction: column;
-    align-items: flex-start;
+
+  .track-card {
+    padding: 1.5rem;
+  }
+
+  .header {
+    padding: 2rem 1rem 1rem;
+  }
+
+  .music-container {
+    padding: 1rem;
   }
 }
 
+@media (max-width: 480px) {
+  .nav {
+    grid-template-columns: 1fr;
+  }
+
+  .player-controls {
+    flex-direction: column;
+    gap: 0.75rem;
+  }
+
+  .track-info {
+    text-align: center;
+  }
+}
   </style>
 </head>
 
